--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@stellar-broker/ui",
   "private": true,
-  "version": "0.11.0",
+  "version": "0.12.0",
   "description": "Website UI for StellarBroker service",
   "author": "team@stellar.broker",
   "homepage": "https://stellar.broker",
@@ -17,13 +17,15 @@
   "dependencies": {
     "@creit.tech/stellar-wallets-kit": "^1.9.5",
     "@stellar-broker/client": "^0.6.14",
-    "@stellar-expert/asset-descriptor": "^1.4.0",
+    "@stellar-expert/asset-descriptor": "^1.5.0",
     "@stellar-expert/formatter": "^2.5.0",
-    "@stellar/stellar-sdk": "14.3.3",
+    "@stellar/stellar-sdk": "14.4.3",
+    "@walletconnect/sign-client": "2.11.2",
     "classnames": "^2.5.1",
     "highcharts": "8.1.0",
-    "jwt-decode": "4.0.0",
     "history": "^4.10.1",
+    "jwt-decode": "4.0.0",
+    "qrcode.react": "^4.2.0",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
